DT-1800  Fix product search alignment in IE

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -510,6 +510,14 @@ select::-ms-expand {
     display: none;
 }
 
+.productlist-search {
+    label, input[type="search"], .btn {
+        display: inline-block;
+        vertical-align: middle;
+        margin-bottom: 0;
+    }
+}
+
 .svg {
 	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select, select {
 		background-image: image('/images/arrow-down.svg');
